# moos

./: .env  .env.development  .gitignore  .markdownlint-cli2.jsonc  .mcp.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEV.md  FFS0_Factory.code-workspace  GEMINI.md  LICENSE  Modelfile.godel  README.md  System 3 AI - No Humans Needed - transcript.txt  WORKSPACE_STATUS.md  __init__.py  cli.py  commit_result.txt  dev.ps1  factory.code-workspace  moos-domain-expert.skill  moos.code-workspace  pyproject.toml  run_legacy.ps1  run_studio.ps1  test_benchmark.py  test_vector_store.py  tmpclaude-1f79-cwd  workspace-guide.md
_legacy/legacy_container_UX/backend/: .gitattributes  Dockerfile  README.md  cleanup_firestore.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
_legacy/legacy_container_UX/backend/api-tests/: .httpyac.json  auth.http  health.http  http-client.env.json  resources.http
_legacy/legacy_container_UX/backend/scripts/: README.md  gcp-helpers.psm1  logfire_tail.py  query_tools_response.py
_legacy/legacy_container_UX/backend/sdk/: README.md  __init__.py  client.py  persistence.py
_legacy/legacy_container_UX/backend/src/: __init__.py  main.py  worker.py
_legacy/legacy_container_UX/backend/src/agents/: demo_agent.py
_legacy/legacy_container_UX/backend/tests/: conftest.py  load_test_50_sessions.py  phase_a_validation.py  uom_edge_test.py
agent-studio/: README.md  pyproject.toml
agent-studio/backend/: debug_auth.py  inspect_menno.py  kill_ghost.py  test_conn.py  test_deps.py
agent-studio/backend/app/: acl_mock.py  cache.py  deps.py  main.py  models.py
agent-studio/backend/app/agents/: analyst.py  researcher.py
agent-studio/backend/data/: conversations.db
agent-studio/frontend/: package-lock.json  package.json
agent-studio/frontend/src/: config.ts
agent-studio/frontend/src/app/: layout.tsx  page.tsx
agent-studio/frontend/src/components/: ToolCallCard.tsx  WorkspaceCanvas.tsx
agent-studio/frontend/src/hooks/: useChat.ts
agent-studio/frontend/src/stores/: useWorkspaceStore.ts
workspaces/FFS1_ColliderDataSystems/: .env  .env.example  .gitignore  CLAUDE.md  FFS1_ColliderDataSystems.code-workspace  GEMINI.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  start-dev.bat  start-dev.sh  start-moos-stack.ps1  tmpclaude-293d-cwd
workspaces/FFS1_ColliderDataSystems/.agent/: index.md  manifest.yaml
workspaces/FFS1_ColliderDataSystems/.agent/configs/: _index.md  domains.yaml  servers.yaml
workspaces/FFS1_ColliderDataSystems/.agent/instructions/: agent_system.md  filesyst_domain.md
workspaces/FFS1_ColliderDataSystems/.agent/knowledge/: 2026-02-09_frontend_architecture_restructure.md  RUNNING.md  _index.md  collider_rebuild_plan.md  tmpclaude-7ec4-cwd
workspaces/FFS1_ColliderDataSystems/.agent/rules/: code_quality.md  communication_architecture.md  extension_boundaries.md  project_structure.md  stack_standards.md
workspaces/FFS1_ColliderDataSystems/.agent/skills/: _index.md  ide_code_assist.md
workspaces/FFS1_ColliderDataSystems/.agent/tools/: _index.md  filesyst_tools.json
workspaces/FFS1_ColliderDataSystems/.agent/workflows/: _index.md  cross-service-validation-gates.md  dev-extension.md  dev-start.md  markdown-quality-all.md  markdown-quality.md
workspaces/FFS1_ColliderDataSystems/FFS2_ColliderBackends_MultiAgentChromeExtension/: .env  .env.example  README.md  TEST_STRATEGY.md
workspaces/FFS1_ColliderDataSystems/FFS2_ColliderBackends_MultiAgentChromeExtension/.agent/: index.md  manifest.yaml
workspaces/FFS1_ColliderDataSystems/FFS2_ColliderBackends_MultiAgentChromeExtension/ColliderAgentRunner/: README.md  out.txt  pyproject.toml  test_out.txt
workspaces/FFS1_ColliderDataSystems/FFS2_ColliderBackends_MultiAgentChromeExtension/ColliderDataServer/: .gitignore  alembic.ini  pyproject.toml  seed_data.py  tmpclaude-c98e-cwd
workspaces/FFS1_ColliderDataSystems/FFS2_ColliderBackends_MultiAgentChromeExtension/ColliderGraphToolServer/: pyproject.toml  tmpclaude-3082-cwd
workspaces/FFS1_ColliderDataSystems/FFS2_ColliderBackends_MultiAgentChromeExtension/ColliderMultiAgentsChromeExtension/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tmpclaude-9ec4-cwd  tsconfig.json
workspaces/FFS1_ColliderDataSystems/FFS2_ColliderBackends_MultiAgentChromeExtension/ColliderVectorDbServer/: pyproject.toml  tmpclaude-dc78-cwd
workspaces/FFS1_ColliderDataSystems/FFS2_ColliderBackends_MultiAgentChromeExtension/NanoClawBridge/: .env.example  package.json  test_ws.js  tsconfig.json
workspaces/FFS1_ColliderDataSystems/FFS2_ColliderBackends_MultiAgentChromeExtension/moos/: .gitignore  Dockerfile  README.md  clean_persist.py  clean_refactor.py  clean_refactor2.py  cover-morphism  cover_container  cover_container.out  cover_morphism.out  do_py_careful.py  do_py_final3.py  do_refactor_final.py  docker-compose.dev.yml  docker-compose.yml  final_fixes.py  fix_append.py  fix_create.py  fix_dupl.py  fix_dupl_restore.py  fix_restore.py  fix_store.py  fix_store2.py  fix_store3.py  go.mod  go.sum  nx.json  package.json  pnpm-lock.yaml  refactor_final.py  tsconfig.base.json  tsconfig.json
workspaces/FFS1_ColliderDataSystems/FFS2_ColliderBackends_MultiAgentChromeExtension/proto/: collider_data_pb2.py  collider_data_pb2.pyi  collider_data_pb2_grpc.py  collider_graph.proto  collider_graph_pb2.py  collider_graph_pb2.pyi  collider_graph_pb2_grpc.py  collider_vectordb.proto  collider_vectordb_pb2.py  collider_vectordb_pb2_grpc.py  compile_protos.py
workspaces/FFS1_ColliderDataSystems/FFS2_ColliderBackends_MultiAgentChromeExtension/scripts/: health-check.ps1  start-all.ps1
workspaces/FFS1_ColliderDataSystems/FFS3_ColliderApplicationsFrontendServer/: .env.example  CLAUDE.md  GEMINI.md  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tmpclaude-4965-cwd  tsconfig.base.json
workspaces/FFS1_ColliderDataSystems/FFS3_ColliderApplicationsFrontendServer/.agent/: index.md  manifest.yaml
workspaces/FFS1_ColliderDataSystems/openclaw-collider-skill/: SKILL.md  bootstrap.sh
(+1989 files in other folders)
