[project]
name = "agent-factory"
version = "0.2.5"
description = "Upstream parts producer for multi-workspace AI development"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core
    "pydantic>=2.12.5",
    "pydantic-ai>=0.0.14",
    "ollama>=0.6.1",
    "python-dotenv>=1.0.0",
    
    # Agent framework (using available versions)
    "pydantic-deep>=0.1.0",
    
    # Vector store
    "faiss-cpu>=1.13.2",
    "sentence-transformers>=3.0.0",
    "numpy>=2.4.0",
    "scipy>=1.15.0",
    
    # Toolset dependencies
    "networkx>=3.4.0",
    "sqlalchemy>=2.0.45",
    "aiosqlite>=0.22.1",
    "fastapi>=0.128.0",
    
    # Interface dependencies
    "rich>=13.0.0",
    "gradio>=4.0.0",
    "sse-starlette>=2.0.0",
    "click>=8.0.0",
    "uvicorn>=0.30.0",
]

[tool.setuptools]
packages = [
    "agent_factory", 
    "agent_factory.models_v2", 
    "agent_factory.parts",
    "agent_factory.parts.agents",
    "agent_factory.parts.config",
    "agent_factory.parts.runtimes",
    "agent_factory.parts.runtimes.local_ux",
    "agent_factory.parts.skills",
    "agent_factory.parts.templates",
    "agent_factory.parts.templates.backend",
    "agent_factory.parts.templates.persistence",
    "agent_factory.parts.templates.vision",
    "agent_factory.parts.toolsets",
    "agent_factory.parts.ui"
]




[tool.setuptools.package-dir]
agent_factory = "."

[tool.uv]
package = true

[tool.uv.workspace]
members = [
    "deepagent-test",
]

[project.scripts]
local-ux = "agent_factory.parts.runtimes.local_ux.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]
