[project]
name = "agent-studio"
version = "0.1.0"
description = "Integrated DeepAgent Application with Full-Stack Template"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-deep>=0.2.9",
    "pydantic-ai>=0.0.20",
    "pydantic-ai-backend[docker]>=0.0.3",
    "google-genai>=1.0.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.18",
    "python-jose>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==3.2.0",
]
