[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "collider"
version = "2026.1.0"
description = "Context-centric AI tool execution platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Collider Team", email = "team@collider.dev" }]
maintainers = [{ name = "Collider Team", email = "team@collider.dev" }]
keywords = ["ai", "agent", "tool-execution", "fastapi", "pydantic-ai", "data-pipeline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "fastapi>=0.120.1",
    "starlette>=0.49.1",
    "pydantic==2.12.0",
    "pydantic-settings==2.11.0",
    "uvicorn[standard]==0.37.0",
    "python-multipart",
    "python-dotenv==1.1.1",
    "logfire[fastapi]",
    "google-cloud-firestore==2.21.0",
    "google-cloud-run==0.10.11",
    "redis[hiredis]==5.0.1",
    "python-jose[cryptography]==3.5.0",
    "bcrypt==5.0.0",
    "passlib==1.7.4",
    "httpx==0.28.1",
    "mcp>=1.10.0",
    "pydantic-ai",
    # Google Workspace APIs
    "google-api-python-client>=2.149.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "google-cloud-storage>=2.18.2",
]

[project.urls]
Homepage = "https://github.com/MSD21091969/my-tiny-data-collider"
Documentation = "https://github.com/MSD21091969/my-tiny-data-collider/blob/main/README.md"
Repository = "https://github.com/MSD21091969/my-tiny-data-collider"
Issues = "https://github.com/MSD21091969/my-tiny-data-collider/issues"
Changelog = "https://github.com/MSD21091969/my-tiny-data-collider/blob/main/ROADMAP.md"

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "pytest-cov==5.0.0",
    "ruff>=0.14.0",
    "mypy==1.11.0",
    "pre-commit==4.0.1",
    "bandit[toml]==1.7.10",
    "pip-audit==2.7.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "sdk*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
