[project]
name = "collider-agent-runner"
version = "0.1.0"
description = "ColliderAgentRunner — local pydantic-ai agent that bootstraps from Collider NanoClaw endpoint"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.9.0",
    "pydantic-ai>=0.0.20",
    "httpx>=0.28.0",
    "sse-starlette>=2.0.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
