[project]
name = "collider-graphtool-server"
version = "0.2.0"
description = "Collider GraphTool Server — WebSocket workflow execution engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=14.0",
    "networkx>=3.4.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.9.0",
    "python-dotenv>=1.0.0",
    "grpcio>=1.70.0",
    "grpcio-tools>=1.70.0",
    "mcp>=1.0.0",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "anyio[trio]>=4.0.0",
    "httpx>=0.28.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.pytest.ini_options]
pythonpath = [".", "..", "../proto"]
asyncio_mode = "auto"
testpaths = ["tests"]
