[project]
name = "collider-vectordb-server"
version = "0.1.0"
description = "Collider VectorDB Server — Semantic search with ChromaDB"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.30.0",
    "chromadb>=0.6.0",
    "sentence-transformers>=3.0.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.9.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]
